# rednoter

./: .env.example  .gitignore  README.md  pyproject.toml
examples/: hermes_usage.py
prompts/: xiaohongshu_specialist.md
src/rednoter/: __init__.py  cleanup.py  config.py  downloader.py  exceptions.py  models.py  transcriber.py
