[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rednoter"
version = "0.1.0"
description = "Convert podcast/YouTube audio to Xiaohongshu posts"
requires-python = ">=3.10"
dependencies = [
    "yt-dlp>=2024.1.0",
    "mlx-whisper>=0.4.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/rednoter"]

[project.scripts]
rednoter = "rednoter._cli:main"
